finish time css

--- a/interface.html
+++ b/interface.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lhz's nevigation interface</title>
-    <script src="interface.js"></script>
-    <link rel="stylesheet" href="interface.css">
+    <script src="scripts/interface.js"></script>
+    <link rel="stylesheet" href="styles/interface.css">
 </head>
 
 <body>
     <div class="root">
-        <div class="header">hello</div>
+        <div class="header">welcome to LHZ's nevigation interface</div>
         <div id="time"></div>
     </div>
 </body>
