--- a/interface.html
+++ b/interface.html
@@ -3,10 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="auther" content="Lhzzzzz">
+    <meta name="discription"
+        content="This is a navigation interface made by lhz, which have some commonly used website.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- webpage title -->
     <title>Lhz's nevigation interface</title>
+    <!-- script for time-->
     <script src="scripts/interface.js"></script>
+    <!-- script for google search -->
     <link rel="stylesheet" href="styles/interface.css">
+    <!-- icon -->
+    <link rel="icon" href="images/home2.ico" type="image/x-icon">
 </head>
 
 <body>
